--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </tr>
                 <tr>
                     <td rowspan="2" class="image-cell">
-                        <img src="c:\Users\Student\Pictures\IMG_9879.jpg" alt="Tenzin Dolma" class="profile-pic">
+                        <img src="profile-pic.jpg" alt="Tenzin Dolma" class="profile-pic">
                     </td>
                     <td colspan="2" class="project-links">
                         <h3>Links to my JavaScript Projects</h3>
